# Lab_Lista_Spesa

./: Articolo.cpp  Articolo.h  CMakeLists.txt  Categoria.cpp  Categoria.h  Observer.h  README.md  Spesa.cpp  Spesa.h  SpesaNotifier.cpp  SpesaNotifier.h  Subject.cpp  Subject.h  Utente.cpp  Utente.h  main.cpp
test/: CMakeLists.txt  ObserverTest.cpp  SpesaTest.cpp  UtenteTest.cpp
